Сделан список при нажатии кнопки, вывод пользователей

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 DB_NAME=pdswork
 DB_USER=postgres
-DB_PASSWORD=4x24oqwpH
+DB_PASSWORD=0000
+# 4x24oqwpH
 HOST='0.0.0.0'
 DB_HOST='localhost'
 DB_PORT=5432
