Добавлен запрос на добавление пассажира начаты запросы на обновление и вывод пассажиров

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 DB_NAME=pdswork
 DB_USER=postgres
-DB_PASSWORD= 0000
+DB_PASSWORD=4x24oqwpH
 # 4x24oqwpH
 HOST='0.0.0.0'
-DB_HOST='10.1.66.96'
+DB_HOST=localhost
 DB_PORT=5432
 PORT=9800
 SECRET_KEY="MakeyK"
