--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL="http://10.1.66.63:9800/"
+# REACT_APP_API_URL="http://10.1.66.63:9800/"
+REACT_APP_API_URL="http://localhost:9800/"
 PORT = 4000
